--- a/Interactive Cards Details/style.css
+++ b/Interactive Cards Details/style.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     padding: 0px;
     margin: 0px;
+    font-family: 'Space Grotesk', sans-serif;
 }
 
 :root {
@@ -14,14 +15,20 @@
     --Very_dark_violet: hsl(278, 68%, 11%);
 }
 
+
 /*Sección de las dos tarjetas*/
 /*Primera*/
 .section-cards {
     width: 100%;
     height: 200px;
     background-color: var(--Very_dark_violet);
+    display: flex;
+    justify-content: center;
+}
+
+.section-cards_container{
+    width: 400px;
     position: relative;
-    
 }
 
 .section-cards_first-card {
@@ -142,42 +149,100 @@
 /*Sección de datos a diligenciar*/
 
 .Section-Infoclientscards {
-    width: 90%;
-    height: 100vh;
+    width: 360px;
+    height: 500px;
     margin-top: 80px;
-    margin-left: 15px;
-    background-color: antiquewhite;
+    margin-left: 10px;
     display: grid;
     grid-template-rows: 100px 100px 100px 100px;
-    grid-auto-columns: 330px;
-    
+    grid-auto-columns: 100%;
+    justify-content: center;
+
 }
 
+.Section-Infoclientscards h1 {
+    color: rgb(87, 82, 82);
+    font-family: 'Space Grotesk', sans-serif;
+    font-size: 14px;
+    margin-bottom: 5px;
+}
 
+.Section-Infoclientscards_name input {
+    width: 100%;
+    height: 50%;
+    border-style: solid;
+    border-color: gainsboro;
+    border-radius: 5px;
+}
 
-/* <div class="Section-Infoclientscards">
-      
-<div class="Section-Infoclientscards_name">
-  <h1>Cardholder Name</h1>
-  <input type="text" placeholder="e.g. Jane Appleseed">
-  <p></p>
-</div>
-<div class="Section-Infoclientscards_number">
-  <h1>Cardholder Name</h1>
-  <input type="number" placeholder="e.g. 1234 5678 9123 0000">
-  <p></p>
-</div>
-<div class="Section-Infoclientscards_dateandCVV">
-  <div>
-    <h1>Exp. Date (MM/YY)</h1>
-    <input type="number" placeholder="MM">
-    <input type="number" placeholder="YY">
-    <p></p>
-  </div>
-  <div>
-    <h1>cvc</h1>
-    <input type="number" placeholder="e.g. 123">
-    <p></p>
-  </div>
-</div>
-<button>Confirm</button> */
+.Section-Infoclientscards_number input {
+    width: 100%;
+    height: 50%;
+    border-style: solid;
+    border-color: gainsboro;
+    border-radius: 5px;
+}
+
+.infoDate {
+    width: 50%;
+}
+
+.Section-Infoclientscards_dateandCVV {
+    display: flex;   
+}
+
+.DateCards {
+   display: flex;
+   
+}
+
+.DateCards .Input1Cards {
+    width: 40%;
+    height: 50px;
+    border-style: solid;
+    border-color: gainsboro;
+    border-radius: 5px;
+    margin-right: 10%;
+}
+
+.DateCards .Input2Cards {
+    width: 40%;
+    height: 50px;
+    border-style: solid;
+    border-color: gainsboro;
+    border-radius: 5px;
+}
+
+.DateCVV {
+    width: 50%;
+}
+
+.DateCVV Input {
+    width: 100%;
+    height: 50px;
+    border-style: solid;
+    border-color: gainsboro;
+    border-radius: 5px;
+}
+
+.ConfirmButton {
+    width: 360px;
+    height: 60px;
+    background-color: var(--Very_dark_violet);
+    border-radius: 3px;
+    border-style: none;
+    color: white;
+}
+
+/* <div class="DateCards">
+          <h1>Exp. Date (MM/YY)</h1>
+          <input class="Input1Cards" type="number" placeholder="MM">
+          <input class="Input2Cards" type="number" placeholder="YY">
+          <p></p>
+        </div>
+        <div class="DateCVV">
+          <h1>cvc</h1>
+          <input type="number" placeholder="e.g. 123">
+          <p></p>
+        </div>
+      </div> */
