--- a/tip-calculator-app-main/style.css
+++ b/tip-calculator-app-main/style.css
@@ -12,111 +12,241 @@
     --Very_light_grayish_cyan: hsl(189, 41%, 97%);
     --White: hsl(0, 0%, 100%);
 }
-.Section-Calculadora { 
-    width: 100%;
-    height: 800px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+
+
+.Section-Calculadora {
+  display: flex;
+  width: 100%;
+  height: 100vh;
+  flex-direction: column;
+  align-items: center;
+  background-color: rgb(160, 231, 237);
 }
+
+/*Aqui Se organiza el título*/
 .Section-Calculadora_NomCalculadora {
-    width: 375px;
-    height: 100px;
-    display: grid;
-    place-items: center;
-    background-color: var(--Light_grayish_cyan);
+  width: 100%;
+  height: 120px;
+  display: grid;
+  place-items: center;
+  color: var(--Very_dark_cyan);
 }
 
+/*Aqui Se organizan las partes de la calculadora*/
 .Section-Calculadora_CalculoCalculadora {
-    width: 375px;
-    height: 800px;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border-radius: 10px;
-    background-color: var(--Very_light_grayish_cyan);
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: var(--White);
+  border-top-right-radius: 20px;
+  border-top-left-radius: 20px;
 }
+
 .CalculoCalculadora-IngresoTotal {
-    width: 80%;
+  width: 85%;
+  height: 80px;
+  position: relative;
+  margin-top: 15px;
 }
+
+.CalculoCalculadora-IngresoTotal p {
+  font-size: small;
+}
+
 .CalculoCalculadora-IngresoTotal input {
-    width: 80%;
+  width: 100%;
+  height: 30px;
+  border-radius: 5px;
+  text-align: end;
+  font-size: medium;
+  color: var(--Very_dark_cyan);
+  background-color: rgb(217, 234, 233);
+  border-style: none;
+  position: absolute;
+  top: 25px;
 }
+
 .CalculoCalculadora-IngresoTotal span {
-    position: absolute;
+  position: absolute;
+  top: 29px;
+  left: 7px;
 }
 
+.imgPesos {
+  width: 15px;
+}
+
+/* Modulo selección de porcentajes*/
 .CalculoCalculadora-tipCalcu {
-    width: 80%;
+  width: 85%;
+  height: 200px;
+  margin-top: 15px;
 }
-
+.CalculoCalculadora-tipCalcu p {
+  font-size: small;
+}
 .CalculoCalculadora-tipCalculadora {
-    width: 80%;
-    height: 150px;
-    display: grid;
-    grid-template-columns: 40% 40%;
-    grid-template-rows: 25px 25px 25px;
-    grid-row-gap: 10%;
-    grid-column-gap:10%;
+  height: 180px;
+  display: grid;
+  grid-template-columns: 45% 45%;
+  grid-template-rows: 40px 40px 40px;
+  grid-column-gap: 5%;
+  grid-row-gap: 5%;
+
 }
 .CalculoCalculadora-tipCalculadora div {
-    width: 80px;
-    height: 30px;
-    background-color: var(--Very_dark_cyan);
-    color: var(--White);
-    text-align: center;
+  background-color: var(--Very_dark_cyan);
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  height: 100%;
+}
+
+.CalculoCalculadora-tipCalculadora div:hover {
+  background-color: rgb(58, 185, 197);
+  color: black;
+}
+
+
+/* Modulo de numero de personas*/
+.CalculoCalculadora-NumDePersonas {
+  width: 85%;
+  height: 80px;
+  position: relative;
+  margin-top: 5px;
+}
+
+.CalculoCalculadora-NumDePersonas p {
+  font-size: small;
+}
+
+.CalculoCalculadora-NumDePersonas input {
+  width: 100%;
+  height: 30px;
+  border-radius: 5px;
+  text-align: end;
+  font-size: medium;
+  color: var(--Very_dark_cyan);
+  background-color: rgb(217, 234, 233);
+  border-style: none;
+  position: absolute;
+  top: 25px;
+}
+.CalculoCalculadora-NumDePersonas span {
+  position: absolute;
+  top: 29px;
+  left: 7px;
+}
+.SpanUser {
+  width: 15px;
+}
+
+/*Modulo para el calculo del resultado*/
+
+.CalculoCalculadora-Resultado {
+  width: 85%;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  background-color: var(--Very_dark_cyan);
+}
+
+
+.Resultado_TipAmount {
+  width: 90%;
+  margin-top: 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.Resultado_Total {
+  width: 90%;
+  margin-top: 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.text-resulta-p1 {
+  color: white;
+}
+
+.text-resulta-p2 {
+  color: grey;
+  font-size: small;
+}
+.Valor-resulta-p3 {
+  font-size: x-large;
+  color:rgb(58, 185, 197);
+}
+
+button {
+  width: 85%;
+  height: 35px;
+  margin-top: 25px;
+  background-color: rgb(58, 185, 197);
+  border-style: none;
+  border-radius: 5px;
+  font-size: large;
 }
 
 
 
 
-
-/* <body>
-  <section class="Section">
+/* <section class="Section">
     <menu class="Section-Calculadora">
       <div class="Section-Calculadora_NomCalculadora">
-        <h1></h1>
+        <h1>SPLITTER</h1>
       </div>
       <div class="Section-Calculadora_CalculoCalculadora">
         <div class="CalculoCalculadora-IngresoTotal">
           <p>Bill </p>
           <input type="number" name="ValorGanancia" id="ValorGanancia" placeholder="0">
-          <span class="Logopesos"></span>
+          <span class="Logopesos"> <img class="imgPesos" src="./images/icons8-dólar-estadounidense-24.png" alt="" srcset=""></span>
         </div>
-        <div class="CalculoCalculadora-%tipCalculadora">
+        <div class="CalculoCalculadora-tipCalcu">
           <p>Select Tip %</p>
-          <div class="%tipCalculadora5%">5</div>
-          <div class="%tipCalculadora10%">10</div>
-          <div class="%tipCalculadora15%">15</div>
-          <div class="%tipCalculadora25%">25</div>
-          <div class="%tipCalculadora50%">50</div>
-          <div class="%tipCalculadoraCustom">Custom</div>
+          <div class="CalculoCalculadora-tipCalculadora">
+            <div class="%tipCalculadora5%">5</div>
+            <div class="%tipCalculadora10%">10</div>
+            <div class="%tipCalculadora15%">15</div>
+            <div class="%tipCalculadora25%">25</div>
+            <div class="%tipCalculadora50%">50</div>
+            <div class="%tipCalculadoraCustom">Custom</div>
+          </div>
         </div>
         <div class="CalculoCalculadora-NumDePersonas">
           <p>Number of People</p>
           <input type="number" name="ValorGanancia" id="ValorGanancia" placeholder="0">
-          <span class="LogoPerson"></span>
+          <span class="LogoPerson"><img class="SpanUser" src="./images/icons8-user-30.png" alt=""></span>
         </div>
         <div class="CalculoCalculadora-Resultado">
           <div class="Resultado_TipAmount">
             <div class="text-TipAmount">
-              <p>TipAmount</p>
-              <p>/Person</p>
+              <p class="text-resulta-p1">TipAmount</p>
+              <p class="text-resulta-p2">/Person</p>
             </div>
-            <p class="Valor-TipAmount">$0.0</p>
+            <p class="Valor-resulta-p3">$0.0</p>
           </div>
           <div class="Resultado_Total">
             <div class="text-Total">
-              <p>Total</p>
-              <p>/Person</p>
+              <p class="text-resulta-p1">Total</p>
+              <p class="text-resulta-p2">/Person</p>
             </div>
-            <p class="Valor-Total">$0.0</p>
+            <p class="Valor-resulta-p3">$0.0</p>
           </div>
+          <button>RESET</button>
         </div>
-        <button>RESET</button>
       </div>
     </menu>
-  </section>
-  <script src="./script.js"></script>
-</body> */
+  </section> */
+
+
